--- a/src/components/TrendingShows/ListShowsTrending.module.css
+++ b/src/components/TrendingShows/ListShowsTrending.module.css
@@ -1,5 +1,16 @@
 .top-show {
+  padding: 1rem;
+  margin: 0;
   display: flex;
-  width: 100%;
   justify-content: space-between;
+  background-color: white;
+  margin-bottom: 0.2rem;
+}
+
+.top-show:last-child {
+  margin-bottom: 0rem;
+}
+
+.top-show:hover {
+  background-color: #ececec;
 }
