--- a/src/components/Layout/Header/HeaderForm.module.css
+++ b/src/components/Layout/Header/HeaderForm.module.css
@@ -66,6 +66,14 @@ form {
 .input {
   border: none;
   border-bottom: 2px solid white;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: large;
   background-color: transparent;
   margin-right: 0.5rem;
+}
+
+.input:focus {
+  border-color: #ccea8d;
+  outline: none;
 }
