--- a/src/components/Layout/Header/Header.module.css
+++ b/src/components/Layout/Header/Header.module.css
@@ -20,7 +20,6 @@
   margin: 0;
   font-family: 'Raleway', sans-serif;
   font-weight: 300;
-  font-size: 40px;
   color: white;
   -webkit-transition: all 0.4s ease 0s;
   -o-transition: all 0.4s ease 0s;
@@ -65,4 +64,38 @@
   height: 3px;
   width: 75px;
   margin-bottom: 0.25em;
+}
+
+@media screen and (max-width: 912px) {
+  .header {
+    padding: 0 6%;
+  }
+  .icon {
+    font-size: 20px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .icon {
+    font-size: 20px;
+    width: 120px;
+  }
+  .icon:before {
+    width: 60px;
+  }
+  .icon:after {
+    width: 60px;
+  }
+}
+
+@media screen and (max-width: 420px) {
+  .header {
+    position: fixed;
+    padding: 0 5%;
+    top: 0;
+    left: 0;
+    margin: 0px;
+    right: 0;
+    width: 100%;
+  }
 }
