--- a/src/components/Layout/Header/HeaderForm.module.css
+++ b/src/components/Layout/Header/HeaderForm.module.css
@@ -17,27 +17,12 @@ form {
   font-weight: bold;
 }
 
+.button p {
+  padding-left: 0.2rem;
+}
+
 .button:hover,
 .button:active {
-  background-color: #a6bc09;
-}
-
-.icon {
-  width: 1.35rem;
-  height: 1.35rem;
-  margin-right: 0.5rem;
-}
-
-.badge {
-  background-color: #b94517;
-  padding: 0.25rem 1rem;
-  border-radius: 25px;
-  margin-left: 1rem;
-  font-weight: bold;
-}
-
-.button:hover .badge,
-.button:active .badge {
   background-color: #a6bc09;
 }
 
@@ -69,6 +54,7 @@ form {
   color: white;
   font-family: Arial, Helvetica, sans-serif;
   font-size: large;
+  width: 10rem;
   background-color: transparent;
   margin-right: 0.5rem;
 }
@@ -76,4 +62,31 @@ form {
 .input:focus {
   border-color: #ccea8d;
   outline: none;
+}
+
+@media screen and (max-width: 600px) {
+  .input {
+    font-size: medium;
+    width: 7rem;
+  }
+
+  .button {
+    padding: 0.3rem 1rem;
+    border-radius: 25px;
+    font-weight: bold;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .input {
+    width: 5rem;
+  }
+
+  .button {
+    padding: 0.6rem 1rem;
+  }
+
+  .button p {
+    display: none;
+  }
 }
