--- a/src/components/TrendingShows/SingleShowTrending.module.css
+++ b/src/components/TrendingShows/SingleShowTrending.module.css
@@ -16,6 +16,7 @@ a:link {
 }
 
 .top {
+  padding-left: 1rem;
   width: 3%;
   font-family: 'Times New Roman', Times, serif;
   font-weight: 900;
@@ -25,6 +26,8 @@ a:link {
 
 .image {
   width: 33%;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .name {
@@ -42,9 +45,39 @@ a:link {
   font-size: 0.9rem;
   color: black;
   font-style: italic;
+  padding-right: 1rem;
 }
 
-.tv h3 {
+@media screen and (max-width: 750px) {
+  .top {
+    width: 6%;
+    padding-left: 0.4rem;
+    padding-right: 0.2rem;
+  }
+
+  .name {
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+    font-size: 1rem;
+  }
+}
+
+@media screen and (max-width: 460px) {
+  .score {
+    display: none !important;
+  }
+
+  .name {
+    font-size: 0.9rem;
+  }
+
+  .image {
+    width: 25%;
+  }
+
+  .image img {
+    width: 90%;
+  }
 }
 /* .image {
   width: 50%;
