--- a/src/pages/ShowDetail.module.css
+++ b/src/pages/ShowDetail.module.css
@@ -1,13 +1,41 @@
 .container {
-  display: inline-block;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-gap: 1rem;
 }
 
-.container img {
-  margin: 1rem 1rem 1rem 1rem;
+.img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .container h1 {
   display: inline-block;
+  color: #404040;
+  font-size: 3em;
+  font-family: 'Maitree', serif;
+  text-align: justify;
+}
+
+.container h2 {
+  color: #676767;
+  font-style: italic;
+  margin: 0 0 1rem 1rem;
+  font-size: 1.2rem;
+}
+
+.show-info {
+  padding: 0.5rem 1rem 0rem 0rem;
+}
+
+.summary {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  text-align: justify;
+}
+
+.show-summary-info {
+  margin-bottom: 1rem;
 }
 
 .error {
@@ -17,4 +45,20 @@
   transform: translate(-50%, -50%);
   font-weight: 600;
   font-size: larger;
+}
+
+@media screen and (max-width: 992px) {
+  .container {
+    grid-template-columns: 1fr;
+  }
+
+  .show-info {
+    padding: 0 1rem 0 1rem;
+  }
+
+  .show-info h1,
+  .show-info h2 {
+    display: block;
+    text-align: center;
+  }
 }
