validation in HeaderForm

--- a/src/pages/ListShows.module.css
+++ b/src/pages/ListShows.module.css
@@ -6,8 +6,17 @@
   grid-gap: 1rem;
 }
 
+section {
+  position: relative;
+}
+
 .error {
-  text-align: center;
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  font-weight: 600;
+  font-size: larger;
 }
 
 @media screen and (max-width: 1470px) {
