--- a/src/components/TrendingShows/SingleShowTrending.module.css
+++ b/src/components/TrendingShows/SingleShowTrending.module.css
@@ -1,14 +1,6 @@
 .tv {
-  display: table;
-  width: 100%;
-  justify-content: space-between;
-}
-
-.tv div {
-  display: table-cell;
-  height: 100%;
-  vertical-align: middle;
-  text-align: center;
+  display: flex;
+  width: fit-content;
 }
 
 a:link {
@@ -16,30 +8,34 @@ a:link {
 }
 
 .top {
-  padding-left: 1rem;
-  width: 3%;
+  margin: 1rem;
   font-family: 'Times New Roman', Times, serif;
-  font-weight: 900;
-  font-size: 2rem;
+  font-weight: 400;
+  font-size: 25px;
   color: black;
 }
 
 .image {
-  width: 33%;
-  padding-top: 1rem;
+  width: fit-content;
   padding-bottom: 1rem;
 }
 
+img {
+  width: 7rem;
+  border-radius: 10px;
+}
+
 .name {
-  width: 45%;
+  width: fit-content;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 900;
-  font-size: 1.2rem;
+  font-size: 18px;
   color: black;
 }
 
 .score {
-  width: 14%;
+  width: fit-content;
+  display: flex;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 600;
   font-size: 0.9rem;
