--- a/src/components/TrendingShows/SingleShowTrending.module.css
+++ b/src/components/TrendingShows/SingleShowTrending.module.css
@@ -10,8 +10,7 @@ a:link {
 .top {
   margin: 1rem;
   font-family: 'Times New Roman', Times, serif;
-  font-weight: 400;
-  font-size: 25px;
+  font-size: 20px;
   color: black;
 }
 
@@ -29,8 +28,9 @@ img {
   width: fit-content;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 900;
-  font-size: 18px;
+  font-size: 15px;
   color: black;
+  margin: 1rem;
 }
 
 .score {
