--- a/src/components/TrendingShows/SingleShowTrending.module.css
+++ b/src/components/TrendingShows/SingleShowTrending.module.css
@@ -1,50 +1,78 @@
 .tv {
-  display: flex;
-  width: fit-content;
-}
-
-a:link {
+  width: 100%;
+  max-width: 600px;
+  background-color: #f4f4f4;
+  border-radius: 10px;
+  overflow: hidden;
+  transition: transform 0.3s ease;
+  color: inherit;
   text-decoration: none;
 }
 
-.top {
-  margin: 1rem;
-  font-family: 'Times New Roman', Times, serif;
-  font-size: 20px;
-  color: black;
+.tv:hover {
+  transform: scale(1.05);
+}
+
+.container {
+  display: flex;
+  gap: 1rem;
+  padding: 1rem;
 }
 
 .image {
-  width: fit-content;
-  padding-bottom: 1rem;
+  flex-shrink: 0;
 }
 
-img {
+.image img {
   width: 7rem;
+  height: auto;
   border-radius: 10px;
 }
 
-.name {
-  width: fit-content;
+.details {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  flex: 1;
+}
+
+.top {
+  font-size: 1rem;
+  color: #333;
+  margin-bottom: 0.3rem;
+}
+
+.name h3 {
   font-family: Arial, Helvetica, sans-serif;
-  font-weight: 900;
-  font-size: 15px;
-  color: black;
-  margin: 1rem;
+  font-weight: bold;
+  font-size: 1.2rem;
+  color: #000;
+  margin: 0;
 }
 
 .score {
-  width: fit-content;
   display: flex;
+  align-items: center;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 600;
   font-size: 0.9rem;
-  color: black;
-  font-style: italic;
-  padding-right: 1rem;
+  color: #ffa500;
+  margin: 0.5rem 0;
 }
 
-@media screen and (max-width: 750px) {
+.score i {
+  color: #ffa500;
+  margin-right: 0.3rem;
+}
+
+.overview {
+  font-size: 0.9rem;
+  color: #666;
+  font-style: italic;
+  margin-top: 1rem;
+}
+
+/*@media screen and (max-width: 750px) {
   .top {
     width: 6%;
     padding-left: 0.4rem;
