--- a/src/pages/TrendingShows.module.css
+++ b/src/pages/TrendingShows.module.css
@@ -1,6 +1,5 @@
 .trending h1 {
   color: #333333;
-  font-family: Georgia, serif;
   font-size: 2rem;
   font-style: italic;
   text-align: center;
@@ -12,6 +11,7 @@
   background: #ececec;
   -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  list-style: none;
 }
 
 .error {
