finished changes in main page

--- a/src/components/TrendingShows/ListShowsTrending.module.css
+++ b/src/components/TrendingShows/ListShowsTrending.module.css
@@ -1,6 +1,6 @@
-.top-show {
+/*s.top-show {
   margin: 0;
   justify-content: space-between;
   margin-bottom: 0.2rem;
   background-color: white;
-}
+}*/
