--- a/src/components/Layout/Header/Header.module.css
+++ b/src/components/Layout/Header/Header.module.css
@@ -66,6 +66,11 @@
   margin-bottom: 0.25em;
 }
 
+a:link,
+a:visited {
+  text-decoration: none;
+}
+
 @media screen and (max-width: 912px) {
   .header {
     padding: 0 6%;
