--- a/src/pages/ShowDetail.module.css
+++ b/src/pages/ShowDetail.module.css
@@ -1,42 +1,47 @@
 .container {
-  padding-top: 1rem;
-  display: grid;
-  grid-template-columns: 1fr 2fr;
-  grid-gap: 1rem;
-}
-
-.img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.container h1 {
-  display: inline-block;
-  color: #404040;
-  font-size: 3em;
-  font-family: 'Maitree', serif;
-  text-align: justify;
-}
-
-.container h2 {
-  color: #676767;
-  font-style: italic;
-  margin: 0 0 1rem 1rem;
-  font-size: 1.2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 1rem;
+  flex-wrap: wrap;
 }
 
 .show-info {
-  padding: 0.5rem 1rem 0rem 0rem;
+  flex: 1;
 }
 
-.summary {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  text-align: justify;
+.show-info-card {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  margin: 1rem 0;
+  font-size: 1.1rem;
 }
 
-.show-summary-info {
-  margin-bottom: 1rem;
+.score {
+  align-self: flex-start;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 600;
+  font-size: 1rem;
+  color: #333;
+  display: flex;
+  align-items: center;
+  margin-left: 1rem;
+}
+.media {
+  display: flex;
+  width: 100%;
+  gap: 1rem;
+}
+
+.media img {
+  height: 480px;
+}
+
+.img iframe {
+  height: 454px;
 }
 
 .error {
@@ -50,16 +55,12 @@
 
 @media screen and (max-width: 992px) {
   .container {
-    grid-template-columns: 1fr;
+    flex-direction: column;
   }
 
-  .show-info {
-    padding: 0 1rem 0 1rem;
-  }
-
-  .show-info h1,
-  .show-info h2 {
-    display: block;
+  .score {
+    margin-left: 0;
+    margin-top: 1rem;
     text-align: center;
   }
 }
