--- a/src/components/Layout/Header/Header.module.css
+++ b/src/components/Layout/Header/Header.module.css
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   height: 5rem;
-  background-color: #005148;
+  background-color: var(--dark-green);
   color: white;
   display: flex;
   justify-content: space-between;
@@ -47,7 +47,7 @@
 }
 
 .icon:before {
-  background-color: #a6bc09;
+  background-color: var(--light-green);
   content: '';
   display: block;
   height: 3px;
@@ -55,7 +55,7 @@
   margin-bottom: 5px;
 }
 .icon:after {
-  background-color: #a6bc09;
+  background-color: var(--light-green);
   content: '';
   display: block;
   position: absolute;
