--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,14 @@
   padding: 0;
 }
 
+:root {
+  --light-green: #a6bc09;
+  --dark-green: #005148;
+  --star-yellow: #ffa500;
+}
+
 html {
-  font-family: 'Roboto', sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 body {
