--- a/src/pages/ShowDetail.module.css
+++ b/src/pages/ShowDetail.module.css
@@ -6,6 +6,7 @@
   margin: 0 auto;
   padding: 1rem;
   flex-wrap: wrap;
+  position: relative;
 }
 
 .show-info {
@@ -20,28 +21,69 @@
   font-size: 1.1rem;
 }
 
+.summary {
+  font-weight: 400;
+  text-align: justify;
+  font-size: 1rem;
+  margin-bottom: 1rem;
+}
+
+.summary span {
+  line-height: 0.7rem;
+  letter-spacing: 0.03125em;
+}
+
+/* Score styling */
 .score {
-  align-self: flex-start;
   font-family: Arial, Helvetica, sans-serif;
-  font-weight: 600;
+  font-weight: 800;
   font-size: 1rem;
   color: #333;
   display: flex;
   align-items: center;
-  margin-left: 1rem;
+  position: absolute; /* Position score in the top-right corner */
+  top: 1rem;
+  right: 1rem;
+  z-index: 10; /* Ensure the score stays above other content */
 }
+
+.score i {
+  margin-right: 0.5rem;
+}
+
 .media {
   display: flex;
-  width: 100%;
   gap: 1rem;
+  flex-wrap: wrap;
+  width: 100%;
 }
 
-.media img {
-  height: 480px;
+.img {
+  flex: 1;
+  max-width: 50%;
 }
 
-.img iframe {
-  height: 454px;
+.img img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
+.video-wrapper {
+  flex: 1;
+  max-width: 50%;
+  position: relative;
+  padding-top: 56.25%; /* Maintain 16:9 aspect ratio */
+  overflow: hidden;
+}
+
+.video-wrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
 }
 
 .error {
@@ -51,16 +93,4 @@
   transform: translate(-50%, -50%);
   font-weight: 600;
   font-size: larger;
-}
-
-@media screen and (max-width: 992px) {
-  .container {
-    flex-direction: column;
-  }
-
-  .score {
-    margin-left: 0;
-    margin-top: 1rem;
-    text-align: center;
-  }
 }
