--- a/src/pages/ShowDetail.module.css
+++ b/src/pages/ShowDetail.module.css
@@ -12,6 +12,11 @@
 
 .show-info {
   flex: 1;
+  width: 80%;
+}
+
+.show-info h1 {
+  text-overflow: ellipsis;
 }
 
 .show-info-card {
@@ -36,7 +41,6 @@
 }
 
 .score {
-  font-family: Arial, Helvetica, sans-serif;
   font-weight: 800;
   font-size: 1rem;
   color: #333;
@@ -63,7 +67,7 @@
 
 .img {
   flex: 1;
-  max-width: 50%;
+  max-width: 30%;
 }
 
 .img img {
@@ -73,10 +77,9 @@
 }
 
 .video-wrapper {
-  flex: 1;
-  max-width: 50%;
+  flex: 1 1;
+  max-width: 70%;
   position: relative;
-  padding-top: 56.25%; /* Maintain 16:9 aspect ratio */
   overflow: hidden;
 }
 
@@ -96,4 +99,42 @@
   transform: translate(-50%, -50%);
   font-weight: 600;
   font-size: larger;
+}
+
+@media screen and (max-width: 900px) {
+  .img {
+    display: none;
+  }
+
+  .video-wrapper {
+    display: block;
+    width: 100%;
+    max-width: 100%;
+    position: relative;
+    padding-top: 56.25%;
+  }
+
+  .video-wrapper iframe {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .container {
+    flex-direction: column; /* Stack items vertically */
+  }
+
+  .score {
+    margin: 1rem 0 0 0; /* Reset margins */
+    align-self: flex-start; /* Align to the left */
+  }
+
+  .media {
+    margin-top: 1rem; /* Add spacing for better layout */
+  }
 }
