finished desing for single show

--- a/src/pages/ShowDetail.module.css
+++ b/src/pages/ShowDetail.module.css
@@ -12,11 +12,13 @@
 
 .show-info {
   flex: 1;
-  width: 80%;
+  width: 75%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  text-align: justify;
 }
 
 .show-info h1 {
-  text-overflow: ellipsis;
 }
 
 .show-info-card {
