--- a/src/pages/ListShows.module.css
+++ b/src/pages/ListShows.module.css
@@ -1,8 +1,15 @@
+.single .title {
+  width: 85%;
+  margin: 0 auto;
+}
+
 .single h1 {
   color: #333333;
   font-size: 2rem;
-  text-align: center;
+  text-align: left;
   margin: 1.5rem;
+  border-left: 5px solid #a6bc09;
+  padding-left: 15px;
 }
 
 .single ul {
