--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,8 @@
   --light-green: #a6bc09;
   --dark-green: #005148;
   --star-yellow: #ffa500;
+  --dark-gray: #333333;
+  --light-gray: #666666;
 }
 
 html {
