--- a/src/pages/ListShows.module.css
+++ b/src/pages/ListShows.module.css
@@ -8,7 +8,7 @@
   font-size: 2rem;
   text-align: left;
   margin: 1.5rem;
-  border-left: 5px solid #a6bc09;
+  border-left: 5px solid var(--light-green);
   padding-left: 15px;
 }
 
